tmp.txt
In file included from /home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/IServer.hpp:14,
                 from /home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/AsioTcpServer.hpp:10,
                 from /home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/AsioTcpServer.cpp:8:
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp: In instantiation of ‘void nlohmann::detail::wide_string_input_adapter<BaseInputAdapter, WideCharType>::fill_buffer() [with long unsigned int T = 16; BaseInputAdapter = nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >; WideCharType = nlohmann::basic_json<>]’:
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:5727:13:   required from ‘std::char_traits<char>::int_type nlohmann::detail::wide_string_input_adapter<BaseInputAdapter, WideCharType>::get_character() [with BaseInputAdapter = nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >; WideCharType = nlohmann::basic_json<>; std::char_traits<char>::int_type = int]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:7969:21:   required from ‘nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::char_int_type nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::get() [with BasicJsonType = nlohmann::basic_json<>; InputAdapterType = nlohmann::detail::wide_string_input_adapter<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, nlohmann::basic_json<> >; nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::char_int_type = int]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:8108:13:   required from ‘bool nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::skip_bom() [with BasicJsonType = nlohmann::basic_json<>; InputAdapterType = nlohmann::detail::wide_string_input_adapter<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, nlohmann::basic_json<> >]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:8132:48:   required from ‘nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::token_type nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::scan() [with BasicJsonType = nlohmann::basic_json<>; InputAdapterType = nlohmann::detail::wide_string_input_adapter<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, nlohmann::basic_json<> >; nlohmann::detail::lexer<BasicJsonType, InputAdapterType>::token_type = nlohmann::detail::lexer_base<nlohmann::basic_json<> >::token_type]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:11380:27:   required from ‘nlohmann::detail::parser<BasicJsonType, InputAdapterType>::token_type nlohmann::detail::parser<BasicJsonType, InputAdapterType>::get_token() [with BasicJsonType = nlohmann::basic_json<>; InputAdapterType = nlohmann::detail::wide_string_input_adapter<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, nlohmann::basic_json<> >; nlohmann::detail::parser<BasicJsonType, InputAdapterType>::token_type = nlohmann::detail::lexer_base<nlohmann::basic_json<> >::token_type]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:11018:28:   required from ‘void nlohmann::detail::parser<BasicJsonType, InputAdapterType>::parse(bool, BasicJsonType&) [with BasicJsonType = nlohmann::basic_json<>; InputAdapterType = nlohmann::detail::wide_string_input_adapter<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, nlohmann::basic_json<> >]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:24442:9:   required from ‘static nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer, BinaryType> nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer, BinaryType>::parse(IteratorType, IteratorType, nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer, BinaryType>::parser_callback_t, bool, bool) [with IteratorType = __gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > >; ObjectType = std::map; ArrayType = std::vector; StringType = std::__cxx11::basic_string<char>; BooleanType = bool; NumberIntegerType = long int; NumberUnsignedType = long unsigned int; NumberFloatType = double; AllocatorType = std::allocator; JSONSerializer = nlohmann::adl_serializer; BinaryType = std::vector<unsigned char>; nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer, BinaryType>::parser_callback_t = std::function<bool(int, nlohmann::detail::parse_event_t, nlohmann::basic_json<>&)>]’
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/AsioTcpServer.cpp:79:52:   required from here
/home/cedani/EpitechProject/Tek3/EIP/trueRepo/easystream_main_plugin/src/Server/src/../include/../../nlohmann/json.hpp:5745:67: error: incomplete type ‘nlohmann::detail::wide_string_input_helper<nlohmann::detail::iterator_input_adapter<__gnu_cxx::__normal_iterator<nlohmann::basic_json<>*, std::vector<nlohmann::basic_json<>, std::allocator<nlohmann::basic_json<> > > > >, 16>’ used in nested name specifier
 5745 |         wide_string_input_helper<BaseInputAdapter, T>::fill_buffer(base_adapter, utf8_bytes, utf8_bytes_index, utf8_bytes_filled);
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[ 64%] Building CXX object CMakeFiles/obs-easystream-main-plugin.dir/src/obs/events/EventsScenes.cpp.o
make[2]: *** [CMakeFiles/obs-easystream-main-plugin.dir/build.make:89: CMakeFiles/obs-easystream-main-plugin.dir/src/Server/src/AsioTcpServer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:77: CMakeFiles/obs-easystream-main-plugin.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
